--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "SOM",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#00782e",
+  "background_color": "#FFFFFF",
   "theme_color": "#00782e",
   "icons": [
     {
