--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#FFFFFF",
-  "theme_color": "#00782e",
+  "theme_color": "#607d8b",
   "icons": [
     {
       "src": "icons/icon-192.png",
